--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Neon Button Hover Effect - CSS3</title>
 </head>
 <body>
-    
+    <a href="#"><span id="text">Open</span></a>
 </body>
 </html>
